# MajordomePatternSample

./: CMakeLists.txt  README.md  ServiceDiscoveryClient.c  broker.c  client.c  clientAsynchronous.c  clientCurve.c  workerA.c  workerAcurve.c  workerB.c  workerTask.h
TitanicPattern/: TitanicBroker.c
include/: idbrokerapi.h  idcliapi.h  idp.h  idp_common.h
